--- a/assets/scss/2-layout/_header.scss
+++ b/assets/scss/2-layout/_header.scss
@@ -9,7 +9,7 @@
 
     &.header-sticky{
         &.is-sticky{
-            position: fixed;
+            position: sticky;
             top: 0;
             left: 0;
             width: 100%;
@@ -17,7 +17,7 @@
             z-index: 999;
             transition: $transition--cubic;
             box-shadow: 0 8px 20px 0 rgba(0,0,0,.1);
-    
+
             .header-top-bar{
                 display: none;
             }
@@ -96,7 +96,7 @@
                                     & > li{
                                         & > a{
                                             padding: 35px 15px;
-                                            
+
                                         }
                                     }
                                 }
@@ -113,7 +113,7 @@
                     }
                 }
             }
-            
+
             .header-bottom-bar{
                 display: none;
             }
@@ -128,7 +128,7 @@
             }
         }
 
-       
+
     }
 
 
@@ -158,7 +158,7 @@
 
             .header-info-wrapper{
                 @media #{$tablet-device}{
-                    
+
                     justify-content: space-between;
                 }
                 @media #{$large-mobile}{
@@ -210,8 +210,8 @@
                 }
             }
         }
-     
-   
+
+
     }
 
     &__mobile{
@@ -242,7 +242,7 @@
 }
 
 .header-top-bar{
-    background-color: $theme-color--black4; 
+    background-color: $theme-color--black4;
     color: #ddd;
     font-weight: 400;
     font-size: 14px;
@@ -364,11 +364,11 @@
         z-index: 9;
         min-width: 200px;
         text-align: left;
-        transform: translateY(20px);    
+        transform: translateY(20px);
         visibility: hidden;
         opacity: 0;
         transition:  $transition--cubic;
-        
+
         li{
             a{
                 display: block;
@@ -390,12 +390,12 @@
         .language-dropdown{
              visibility: visible;
              opacity: 1;
-             transform: translateY(0); 
+             transform: translateY(0);
 
          }
      }
 
- 
+
 }
 
 
@@ -433,7 +433,7 @@
                 display: flex;
                 justify-content: center;
                 & > li{
-                    transition: $transition--cubic; 
+                    transition: $transition--cubic;
                     & > a{
                         white-space: nowrap;
                     }
@@ -476,7 +476,7 @@
 
                             }
                         }
-                        
+
                     }
                     & > a{
                         display: block;
@@ -486,7 +486,7 @@
                         font-weight: 400;
                         padding: 46px 16px;
                         position: relative;
-                        transition: $transition--cubic; 
+                        transition: $transition--cubic;
 
                         @media #{$laptop-device}{
                             padding: 46px 13px;
@@ -499,10 +499,10 @@
                             width: 0;
                             content: "";
                             height: 3px;
-                            transition: $transition--cubic; 
+                            transition: $transition--cubic;
                             background-color: $white;
                         }
-                        
+
                     }
 
                     &:hover, &.active{
@@ -524,11 +524,11 @@
     &__icon{
         display: flex;
         color: $theme-color--black;
-        
+
         i{
             font-size: 20px;
         }
-        
+
         &__search{
             & > a{
                 transition: $transition--cubic;
@@ -728,7 +728,7 @@
                         padding: 10px 0;
                         color: #999;
                         line-height: 1.2;
-                        transition: $transition--cubic; 
+                        transition: $transition--cubic;
                         &:hover{
                             color: $theme-color--default;
                         }
@@ -785,7 +785,7 @@
         &.has-children{
             & > a{
                 position: relative;
-                transition: $transition--cubic; 
+                transition: $transition--cubic;
                 &:after{
                     position: absolute;
                     right: 20px;
@@ -805,7 +805,7 @@
         top: 0;
         left: 100%;
         right: auto;
-       
+
 
         & .submenu{
             left: auto;
@@ -823,7 +823,7 @@
             }
         }
     }
-        
+
 }
 
 
@@ -875,7 +875,7 @@
         margin-bottom: 0;
         font-weight: 500;
     }
-    
+
     &__subtitle{
         font-size: 16px;
         color: #737373;
@@ -980,7 +980,7 @@
 
 
 .header-wrapper{
-   
+
     &--shadow{
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.07);
     }
@@ -1046,21 +1046,21 @@
                     font-size: 14px;
                     margin-right: 5px;
                 }
-    
+
                 a{
                     @include font-prop(null, #666, 400, 22px);
                     &:hover{
                         color: $theme-color--default;
                     }
                 }
-    
+
                 &:last-child{
                     margin-right: 0;
                 }
             }
         }
     }
-    
+
 }
 
 .offcanvas-mobile-menu{
@@ -1069,14 +1069,14 @@
     top: 0;
     width: 400px;
     max-width: 100%;
-    
+
     height: 100vh;
     z-index: 9999;
-    
+
     transform: translateX(100%);
     padding-left: 60px;
     transition: 0.6s;
-    
+
 
     &.active{
         transform: translateX(0);
@@ -1113,7 +1113,7 @@
     &:hover, &:focus{
         color: $white;
     }
-    
+
     i{
         transition: 0.3s;
         transform: rotate(0);
@@ -1171,7 +1171,7 @@
         i{
             font-size: 18px;
             line-height: 40px;
-            
+
         }
     }
 }
@@ -1226,7 +1226,7 @@
             }
         }
         li{
-            
+
 
             &.menu-item-has-children{
                 position: relative;
@@ -1320,7 +1320,7 @@
                 }
             }
 
-            
+
         }
 
         ul{
